# O957-Persistent-Template

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deptry-check.yaml  format-deptry-check.yaml
assets/delete/: format-air-check.yaml
