[project]
name = "baseline-template-change"
version = "0.0.1"
authors = [
  {name = "O957", email = "127630341+O957@users.noreply.github.com"},
]
description = ""
license = "Apache-2.0"
readme = "README.md"
keywords = ["design-patterns", "template", "standards"]
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/O957/O957-Template"
Issues = "https://github.com/O957/O957-Template/issues"
"Author GitHub" = "https://github.com/O957"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.deptry]
pep621_dev_dependency_groups = ["dev", "test"]

[tool.vulture]
paths = ["src"]
